--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
             	<img src="img/logo.png" alt="">
             </a>
         </div>
-		<a href="#" class="toggle-button">
+		<a href="#" id="toggle_nav" class="toggle-button">
 			<span class="bar"></span>
 			<span class="bar"></span>
 			<span class="bar"></span>
 		</a>
+		
+
 		<div class="navbar-links">
 			<ul>
 				<li><a href="index.html" class="active">HOME</a></li>	
